install/iptables.v4
# Generated by LPOS deploy-iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [36:2804]
:DOCKER-USER - [0:0]
-A INPUT -p udp -m udp --dport 53 -j ACCEPT  # DNS
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT  # DNS
-A INPUT -p udp -m udp --dport 67 -j ACCEPT  # DHCP
-A INPUT -p udp -m udp --dport 2350 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2350 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3450 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i docker0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
###DOCKER_RULES###
COMMIT
# Completed by LPOS deploy-iptables
# Generated by LPOS deploy-iptables
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed by LPOS deploy-iptables
